--- a/src/views/tweets/index.ejs
+++ b/src/views/tweets/index.ejs
@@ -3,6 +3,8 @@
 <head>
     <title>Home Page</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script type="text/javascript" src="../../public/js/index2.js"></script>
 </head>
 <body>
 <h1><%= user.name %></h1>
@@ -15,9 +17,10 @@
         <p class="usertext">user : <%= tweet.user.name %> </p>
         <p>content : <%= tweet.content %> </p>
         <p>
-        <form action='/favorites/switch/<%= tweet._id %>' method="post">
-            <button type="submit" value="<%= tweet._id%>" id='myButton'>いいね</button>
-        </form>
+<!--        <form action='/favorites/switch/<%= tweet._id %>' method="post">-->
+<!--            <button type="submit" value="<%= tweet._id%>" id='myButton' class="button">いいね</button>-->
+<!--        </form>-->
+        <button type="submit" value="<%= tweet._id%>" id='myButton' class="<%= tweet._id %>" >いいね</button>
         </p>
     <%})%>
 <% } %>
@@ -33,17 +36,4 @@
 </form>
 
 </body>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script type="module">
-    // import * as func from "../../lib/eventEmitter.js";
-    // $(function (){
-    //   $('#myButton').click( (event) =>{
-    //       console.log(event.target.value)
-    //       func.start()
-    //       alert('aaa')
-    //   })
-    // })
-</script>
 </html>
