--- a/src/public/sass/index.scss
+++ b/src/public/sass/index.scss
@@ -1,5 +1,141 @@
-$color: #deedf0;
-
 body {
-  background-color: $color;
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+a {
+  color: #00b7ff;
+}
+
+.brand {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.site-header {
+  position: relative;
+  background-color: #def7ff;
+}
+
+.site-header__wrapper {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+@media (min-width: 600px) {
+  .site-header__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+@media (min-width: 600px) {
+  .nav__wrapper {
+    display: flex;
+  }
+}
+
+@media (max-width: 599px) {
+  .nav__wrapper {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #d9f0f7;
+    visibility: hidden;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+  }
+  .nav__wrapper.active {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.nav__item a {
+  display: block;
+  padding: 1.5rem 1rem;
+}
+
+.nav__toggle {
+  display: none;
+}
+@media (max-width: 599px) {
+  .nav__toggle {
+    display: block;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+  }
+}
+
+.login-header {
+  position: relative;
+  background-color: #def0e0;
+}
+
+.login-header__wrapper {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+@media (min-width: 600px) {
+  .login-header__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+
+.login-form {
+  background-color: #f6f8f6;
+}
+
+.login-form__wrapper {
+  padding-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.login-bottun__wrapper {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+.login-input {
+  width: 100%;
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 3px;
+  border: 2px solid #ddd;
+  box-sizing: border-box;
+  &:focus {
+    border: 2px solid #1cb94bfb;
+    z-index: 10;
+    outline: 0;
+  }
+}
+
+.login-link {
+  font-size: 18px;
+}
+
+.login-button {
+  appearance: none;
+  border: 0;
+  border-radius: 5px;
+  background: #75d48d;
+  color: #fff;
+  padding: 8px 16px;
+  font-size: 16px;
+  &:hover {
+    background: #1daa35;
+  }
 }
