--- a/src/views/account/login.ejs
+++ b/src/views/account/login.ejs
@@ -7,12 +7,34 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
-    <form action="/users/login" method="POST">
-        <label>メールアドレス</label>
-        <input type="text" name="email" autofocus required>
-        <label>パスワード</label>
-        <input type="password" name="password" required>
-        <button type="submit">ログイン</button>
-    </form>
+    <header class="login-header">
+        <div class="wrapper login-header__wrapper">
+            <p class="brand">ログイン画面</p>
+        </div>
+    </header>
+    <div class="login-form">
+        <div class="wrapper login-form__wrapper">
+            <form action="/users/login" method="POST">
+                <label>メールアドレス</label>
+                <br/>
+                <input class="login-input" type="text" name="email" autofocus required>
+                <br/>
+                <br/>
+                <label>パスワード</label>
+                <br/>
+                <input class="login-input" type="password" name="password" required>
+                <br/>
+                <br/>
+                <p class="login-link">
+                    <a href="/register">ユーザー登録がお済みでない方はこちら</a>
+                </p>
+                <br/>
+                <hr/>
+                <div class="wrapper login-bottun__wrapper">
+                    <button type="submit" class="login-button">ログイン</button>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
