AP＋WEBサーバー構築

--- a/src/views/account/register.ejs
+++ b/src/views/account/register.ejs
@@ -31,7 +31,7 @@
                 <br/>
                 <br/>
                 <p  class="login-link">
-                    <a href="/login">ユーザー登録がお済みの方はこちら</a>
+                    <a href="/">ユーザー登録がお済みの方はこちら</a>
                 </p>
                 <br/>
                 <hr/>
